@@ -1,10 +1,12 @@
 Package: Rvmmin
 Type: Package
 Title: Variable metric nonlinear function minimization with bounds constraints
-Version: 2013-1.25
-Date: 2013-01-25
-Author: John C. Nash
+Version: 2013-7.20
+Date: 2013-07-20
+Authors@R: c( person(given = c("John", "C."), family = "Nash", role =
+        c("aut", "cre"), email = "nashjc@uottawa.ca") )
 Maintainer: John C. Nash <nashjc@uottawa.ca>
 Description: Variable metric nonlinear function minimization with bounds constraints
+LazyLoad: Yes
 License: GPL (>= 2)
 
